--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
