--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-nd-neighborhood-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://digaodev.github.io/frontend-nd-neighborhood-map",
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.1",
@@ -12,9 +13,13 @@
     "sort-by": "^1.2.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
